1.更新一些在maven3 中不同的groupId的写法 2.还有就是更新了一些maven编译相关的版本号

--- a/tddl-atom-datasource/pom.xml
+++ b/tddl-atom-datasource/pom.xml
@@ -12,7 +12,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>tddl-common</artifactId>
 		</dependency>
 		<dependency>
