--- a/tddl-group-datasource/pom.xml
+++ b/tddl-group-datasource/pom.xml
@@ -12,11 +12,11 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>tddl-common</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>tddl-atom-datasource</artifactId>
 		</dependency>
 		<dependency>
