--- a/tbdatasource/pom.xml
+++ b/tbdatasource/pom.xml
@@ -57,7 +57,9 @@
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.3.0</version>
 			<scope>test</scope>
+			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
